# lucidata

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/models/: mod.rs
api/src/routes/: mod.rs
database/migrations/: 001_initial_schema.sql
database/scripts/: import_mtcars.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: QueryInput.js  ResponseDisplay.js
frontend/src/services/: api.js
llm_engine/: Cargo.toml  Dockerfile  requirements.txt
llm_engine/src/: db_schema.py  db_schema.rs  llm_processor.py  llm_processor.rs  main.py  main.rs
llm_engine/src/prompt_templates/: sql_translation.txt
query_router/: Cargo.toml  Dockerfile
query_router/src/: main.rs
query_runner/: Cargo.toml  Dockerfile  requirements.txt
query_runner/src/: main.py  main.rs
response_formatter/: Dockerfile  requirements.txt
response_formatter/src/: main.py
