[package]
name = "query_router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
